resources/sass/app.scss
@import "~bootstrap/scss/bootstrap";
@import "~dialog-polyfill/dialog-polyfill.css";

@keyframes fade-in {
  from { opacity: 0; }
  to   { opacity: 1; }
}

html, body {
  height: 100%;
}

main {
  min-height: calc(100% - 4rem);
}

.pagination {
  justify-content: center;
}

.btn svg {
  width: 1.2rem;
  height: 1.2rem;
  vertical-align: text-bottom;
}

a svg {
  width: 0.956rem;
  height: 0.956rem;
}

.no-select {
  user-select: none;
}

.home {
  min-height: calc(100vh - 8rem);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#dialog-toggle + dialog {
  display: none;
}

#dialog-toggle:checked + dialog {
  display: block;
}

.advanced-search {
  animation: fade-in 0.2s;
  backdrop-filter: blur(3px);
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 10;

  .advanced-search-wrapper {
    z-index: 15;
  }

  .advanced-search-container {
    width: 100%;
    z-index: 20;

    .filter-checkbox {
      width: 100%;
    }
  }
}

.book-description {
  max-height: 6rem;
}

@media only screen and (min-width: 768px) {
  .card-cover {
    border-right: 1px solid rgba(0, 0, 0, .125);

    img {
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
    }
  }

  .advanced-search {
    .advanced-search-container {
      width: 75%;

      .filter-checkbox {
        width: 18%;
      }
    }
  }
}

